# labs_coordinate_pictures

./: README.md  SortingImages.md
doc/: GettingStarted.md  KeepingMetadata.md  LICENSE_exiftool  LICENSE_webp  SortingImages.md  SortingImagesExplain.md
src/: .gitignore  labs_coordinate_pictures.sln
src/labs_coordinate_pictures/: ClassConfigs.cs  ClassImageCache.cs  ClassImageOps.cs  ClassModes.cs  ClassModesOther.cs  ClassOsHelpers.cs  ClassSortFiles.cs  ClassUtils.cs  FormGallery.Designer.cs  FormGallery.cs  FormGallery.resx  FormPersonalMusic.Designer.cs  FormPersonalMusic.cs  FormPersonalMusic.resx  FormPersonalText.Designer.cs  FormPersonalText.cs  FormPersonalTwitter.Designer.cs  FormPersonalTwitter.cs  FormPersonalTwitter.resx  FormSortFiles.Designer.cs  FormSortFiles.cs  FormSortFiles.resx  FormSortFilesList.Designer.cs  FormSortFilesList.cs  FormSortFilesList.resx  FormStart.Designer.cs  FormStart.cs  FormStart.resx  InputBox.cs  Program.cs  Tests.cs  TestsSortFiles.cs  TestsSortPictures.cs  TestsUtils.cs  labs_coordinate_pictures.csproj  labs_coordinate_pictures.ruleset  labs_coordinate_pictures.sln  nocpy_ClipboardHelper.cs  packages.config
src/labs_coordinate_pictures/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/tools/: LICENSE_exiftool  LICENSE_imazen  LICENSE_vcredist
src/tools/ben_python_img/: README.md  img_convert_resize.py  img_resize_keep_exif.py  img_tests.py  img_utils.py  pyproject.toml  setup.cfg
src/tools/ben_python_img/tests/: img_test_utils.py  img_tests.py  test_img.py  test_img_utils.py
tools/: log.txt  silence.flac
tools/ben_python_img/: README.md  img_convert_resize.py  img_resize_and_keep_exif.py  img_resize_keep_exif.py  img_tests.py  img_utils.py  main.py  readoptions.py  setup.cfg
