

[project]
name = "ben_python_img"
version = "0.9"
authors = [
  { name="Ben Fisher", email="shinerainseven@gmail.com" },
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
description = "Tools for resizing images and converting between formats"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "shinerainsevenlib",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "ruff",
    "pytest",
]


[project.urls]
Homepage = "https://github.com/moltenform/labs_coordinate_pictures"
Issues = "https://github.com/moltenform/labs_coordinate_pictures/issues"

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py38"

[tool.ruff.lint]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"


[tool.pylint.'MESSAGES CONTROL']


[tool.shinerainsevenlib]
config_collection_legacy = 1
pylint_import_suggested_other_settings = 1
rufflint_import_suggested_other_settings = 1
hide_init_py_while_linting = 1

rufflint_ignore = [
    'S603', # shell=True is ok
    'S604', # shell=True is ok
]

pylint_specific_ignore_containing = [
    # skip this - we don't care about it for Bucket
    "E1101: Instance of 'Bucket' has no",
    # skip this - we don't care about it for fixtures
    "W0621: Redefining name 'fixture_",
    "Access to a protected member _get of",
    "Access to a protected member _get_id of",
    "Unused variable 'retcode'",
    "Unused variable 'stderr'",
    "Unused variable 'stdout'",
    "Redefining built-in 'format'",
]

rufflint_specific_ignore_containing = [
    "Variable `format` is shadowing"
]

format_skip_if_path_contains = [
    '/OUTSIDE/',
    'nocpy_',
    'test_img.py',
]

[tool.yapf]

# reverted formatting changes to test_img.py

# styles: google, pep8, yapf, facebook
based_on_style = "facebook"
spaces_before_comment = 1
split_before_logical_operator = false
column_limit = 90
indent_width = 4

